# Xero

./: .gitignore  LICENSE  README.en.md  README.md  main.xe
editors/xero-vscode-ext/: language-configuration.json  package.json
editors/xero-vscode-ext/syntaxes/: xero.tmLanguage.json
example/: main.xe
src/: CMakeLists.txt  CMakePresets.json  build.hpp  log.hpp  xero.cpp
src/common/: ast.hpp  token.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp  rule.cpp
src/runtime/: engine.cpp  env.hpp  obj.hpp  opertable.hpp  register.cpp  typetable.hpp  xengine.cpp  xengine.hpp
src/runtime/table/: binfn.hpp  fn.hpp  method.hpp  oper.hpp  table_binfn.hpp  table_oper.hpp  type.cpp  type.hpp  typetable.hpp
